<resources>
    <string name="app_name">LearningApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="_1st_grade">1st Grade</string>
    <string name="_2nd_grade">2nd Grade</string>
    <string name="_3rd_grade">3rd Grade</string>
    <string name="_4th_grade">4th Grade</string>
    <string name="lower_primary">Lower Primary</string>
    <string name="upper_primary">Upper Primary</string>
    <string name="_5th_grade">5th Grade</string>
    <string name="_6th_grade">6th Grade</string>
    <string name="_7th_grade">7th Grade</string>
    <string name="_8th_grade">8th Grade</string>
    <string name="form_one">Form One</string>
    <string name="form_two">Form Two</string>
    <string name="form_three">Form Three</string>
    <string name="form_four">Form Four</string>
    <string name="high_school">High School</string>
    <string name="share">share</string>
    <string name="send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
