<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_lowerPrimary"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/lower_primary" />
        <item
            android:id="@+id/nav_upperPrimary"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/upper_primary" />
        <item
            android:id="@+id/nav_highSchool"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/high_school" />

        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_share_black_24dp"
            android:title="@string/share"    />
        <item
        android:id="@+id/nav_send"
        android:icon="@drawable/ic_send_black_24dp"
        android:title="@string/send"    />
    </group>


</menu>
