<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark"
    tools:context=".LowerPrimary">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:fontFamily="sans-serif"
            android:text="@string/lower_primary"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold|italic" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_margin="7dp"
            android:alignmentMode="alignMargins"
            android:columnCount="2"
            android:columnOrderPreserved="false"
            android:rowCount="2">

            <androidx.cardview.widget.CardView
                android:id="@+id/firstGrade"
                android:layout_width="180dp"
                android:layout_height="200dp"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@color/gray"
                app:cardCornerRadius="12dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="125dp"
                        android:layout_height="125dp"
                        android:layout_marginTop="12dp"
                        android:src="@drawable/firstgrade">

                    </ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:fontFamily="sans-serif-black"
                        android:text="@string/_1st_grade"
                        android:textColor="@color/white"
                        android:textSize="25sp">

                    </TextView>


                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/secondGrade"
                android:layout_width="180dp"
                android:layout_height="200dp"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@color/gray"
                app:cardCornerRadius="12dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="125dp"
                        android:layout_height="125dp"
                        android:layout_marginTop="12dp"
                        android:src="@drawable/secondgrade">

                    </ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:fontFamily="sans-serif-black"
                        android:text="@string/_2nd_grade"
                        android:textColor="@color/white"
                        android:textSize="25sp">

                    </TextView>


                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/thirdGrade"
                android:layout_width="180dp"
                android:layout_height="200dp"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@color/gray"
                app:cardCornerRadius="12dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="125dp"
                        android:layout_height="125dp"
                        android:layout_marginTop="12dp"
                        android:src="@drawable/thirdgrade">

                    </ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:fontFamily="sans-serif-black"
                        android:text="@string/_3rd_grade"
                        android:textColor="@color/white"
                        android:textSize="25sp">

                    </TextView>


                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/fourthGrade"
                android:layout_width="180dp"
                android:layout_height="200dp"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@color/gray"
                app:cardCornerRadius="12dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="125dp"
                        android:layout_height="125dp"
                        android:layout_marginTop="12dp"
                        android:src="@drawable/fourthgrade">

                    </ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:fontFamily="sans-serif-black"
                        android:text="@string/_4th_grade"
                        android:textColor="@color/white"
                        android:textSize="25sp">

                    </TextView>


                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </GridLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>